Adicionado um parágrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,6 +10,9 @@
     <h1>Olá, Mundo!</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe, facere quae eos doloribus asperiores dolorum ratione quidem quasi iusto illum quia eum sequi, dignissimos quis sapiente, officiis vel culpa provident.</p>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro sunt accusantium exercitationem corrupti sequi. Itaque libero quos aliquid asperiores, rerum qui iusto, dolorem ducimus nostrum odio, veniam exercitationem incidunt!</p>
+    
+
     
 </body>
 </html>
